# mcp-go-py

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  deploy.sh  lambda_handler.py  mcp_prompts.db  pyproject.toml  requirements.txt  setup.py
.claude/claudedocs/: README.md  performance-optimization-report.md
.cursor/commands/: create-commit.md  manage-python-mcp.md  setup-mcp-environment.md
.cursor/memories/: project-architecture.md  python-mcp-implementation.md
.cursor/rules/: project-overview.mdc  python-code.mdc  templates.mdc
.enhanced-features/: tasks.md
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 390eae8db71b_initial_schema.py
claudedocs/: README.md  action-plan-prioritized-improvements.md  comprehensive-analysis-report.md  security-analysis-report.md  technical-debt-assessment.md
documents/: README.md  advanced_tools_reference.md  alembic-guide.md  architecture.md  aws-deployment.md  component-structure.md  data-lineage.md  design-patterns.md  developer-conduct.md  enhanced_memory_api.md  flow-control.md  performance_monitoring_guide.md  user-guide.md
lambda-layer/: build.sh  requirements.txt
mcp_pba_tunnel/: __init__.py
mcp_pba_tunnel/core/: __init__.py  config.py  mcp_config.json  memory_cleanup_service.py  monitoring_dashboard.py  performance_monitor.py  performance_optimizer.py  security_validator.py
mcp_pba_tunnel/data/: __init__.py  config.json  data_manager.py  patterns.py  project_manager.py  projects.json  validation.py
mcp_pba_tunnel/data/models/: __init__.py  ai_models.py  chain_models.py  prompt_models.py
mcp_pba_tunnel/data/repositories/: __init__.py  ai_repository.py  base.py  database.py  prompt_repository.py
mcp_pba_tunnel/data/services/: __init__.py  ai_service.py  prompt_service.py
mcp_pba_tunnel/mcp/: __init__.py  mcp_config.json
mcp_pba_tunnel/server/: __init__.py  fastapi_mcp_server.py
mcp_pba_tunnel/utils/: __init__.py
migrations/: 001_initial_schema.sql
specs/001-implement-enhanced-mcp/: spec.md
tests/: test_mcp_server.py
